Fix some display issues
Fix some wrong value