@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 # mod version info
 mod_id=caupona
-mod_version = 0.2.1
+mod_version = 0.2.2
 minecraft_version = 1.19.2
 forge_version = 43.1.0
 
@@ -18,7 +18,7 @@ parchment_mappings = 1.18.2-2022.07.10-1.19.2
 
 # curseforge information
 projectId = 656147
-curse_type = beta
+curse_type = release
 
 # github information
 github_project = TeamMoegMC/Caupona
